--- a/game/.godot/global_script_class_cache.cfg
+++ b/game/.godot/global_script_class_cache.cfg
@@ -1,1 +1,257 @@
-list=[]
+list=[{
+"base": &"RefCounted",
+"class": &"BSATNDeserializer",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/Core/BSATNDeserializer.gd"
+}, {
+"base": &"RefCounted",
+"class": &"BSATNSerializer",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/Core/BSATNSerializer.gd"
+}, {
+"base": &"Resource",
+"class": &"CallReducerData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/CallReducerData.gd"
+}, {
+"base": &"RefCounted",
+"class": &"DataDecompressor",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/Core/DataDecompressor.gd"
+}, {
+"base": &"Resource",
+"class": &"DatabaseUpdateData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/DatabaseUpdateData.gd"
+}, {
+"base": &"Resource",
+"class": &"IdentityTokenData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/IdentityTokenData.gd"
+}, {
+"base": &"Resource",
+"class": &"InitialSubscriptionData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/InitialSubscriptionData.gd"
+}, {
+"base": &"Node",
+"class": &"LocalDatabase",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/Core/LocalDatabase.gd"
+}, {
+"base": &"Resource",
+"class": &"OneOffQueryData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/OneOffQueryData.gd"
+}, {
+"base": &"Resource",
+"class": &"QueryIdData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/QueryIdData.gd"
+}, {
+"base": &"Resource",
+"class": &"ReducerCallInfoData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/ReducerCallInfoData.gd"
+}, {
+"base": &"Node",
+"class": &"RowReceiver",
+"icon": "res://addons/SpacetimeDB/Icons/node_icon.svg",
+"is_abstract": false,
+"is_tool": true,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/GodotHelpers/RowReceiver.gd"
+}, {
+"base": &"Node",
+"class": &"SpacetimeDBClient",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/Core/SpacetimeDBClient.gd"
+}, {
+"base": &"Node",
+"class": &"SpacetimeDBConnection",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/Core/SpacetimeDBConnection.gd"
+}, {
+"base": &"Node",
+"class": &"SpacetimeDBRestAPI",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/Core/SpacetimeDBRestAPI.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://state/state.gd"
+}, {
+"base": &"Resource",
+"class": &"SubscribeAppliedData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/SubscribeAppliedData.gd"
+}, {
+"base": &"Resource",
+"class": &"SubscribeData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/SubscribeData.gd"
+}, {
+"base": &"Resource",
+"class": &"SubscribeMultiAppliedData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/SubscribeMultiAppliedData.gd"
+}, {
+"base": &"Resource",
+"class": &"SubscribeMultiData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/SubscribeMultiData.gd"
+}, {
+"base": &"Resource",
+"class": &"SubscribeRowsData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/SubscribeRowsData.gd"
+}, {
+"base": &"Resource",
+"class": &"SubscribeSingleData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/SubscribeSingleData.gd"
+}, {
+"base": &"Resource",
+"class": &"SubscriptionErrorData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/SubscriptionErrorData.gd"
+}, {
+"base": &"Resource",
+"class": &"TableIdData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/TableIdData.gd"
+}, {
+"base": &"Resource",
+"class": &"TableUpdateData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/TableUpdateData.gd"
+}, {
+"base": &"Resource",
+"class": &"TransactionUpdateData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/TransactionUpdateData.gd"
+}, {
+"base": &"Resource",
+"class": &"UnsubscribeAppliedData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/UnsubscribeAppliedData.gd"
+}, {
+"base": &"Resource",
+"class": &"UnsubscribeData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/UnsubscribeData.gd"
+}, {
+"base": &"Resource",
+"class": &"UnsubscribeMultiAppliedData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/UnsubscribeMultiAppliedData.gd"
+}, {
+"base": &"Resource",
+"class": &"UnsubscribeMultiData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/UnsubscribeMultiData.gd"
+}, {
+"base": &"Resource",
+"class": &"UpdateStatusData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://addons/SpacetimeDB/CoreTypes/UpdateStatusData.gd"
+}, {
+"base": &"Resource",
+"class": &"User",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://schema/user.gd"
+}]
