--- a/game/.godot/editor/editor_layout.cfg
+++ b/game/.godot/editor/editor_layout.cfg
@@ -10,7 +10,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://state/game_state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://state/", "res://schema/", "res://main/", "res://addons/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://state/", "res://schema/", "res://main/", "res://addons/", "res://addons/SpacetimeDB/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -30,9 +30,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://main/main.tscn")
 current_scene="res://main/main.tscn"
-center_split_offset=0
-selected_default_debugger_tab_idx=0
+center_split_offset=-563
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -42,7 +43,7 @@ position=Vector2i(0, 42)
 
 [ScriptEditor]
 
-open_scripts=["res://state/game_state.gd", "res://addons/SpacetimeDB/spacetime.gd", "res://state/state.gd", "res://schema/user.gd", "res://state/user_state.gd"]
+open_scripts=["res://state/game_state.gd", "res://main/main.gd", "res://addons/SpacetimeDB/spacetime.gd", "res://addons/SpacetimeDB/Core/SpacetimeDBClient.gd", "res://state/state.gd", "res://schema/user.gd", "res://state/user_state.gd"]
 selected_script="res://state/game_state.gd"
 open_help=[]
 script_split_offset=200
@@ -51,8 +52,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(696, 391, 1168, 702)
+floating_window_screen=0
 
 [ShaderEditor]
 
