--- a/game/.godot/editor/project_metadata.cfg
+++ b/game/.godot/editor/project_metadata.cfg
@@ -13,3 +13,8 @@ scripts=["res://addons/SpacetimeDB/Core/SpacetimeDBClient.gd", "res://main/main.
 [script_setup]
 
 last_selected_language="GDScript"
+
+[export_options]
+
+default_filename="index"
+export_debug=false
