--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^19.1.6",
         "@types/react-dom": "^19.1.5",
         "axios": "^1.9.0",
+        "dayjs": "^1.11.13",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-error-boundary": "^6.0.0",
