--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "^19.1.5",
         "axios": "^1.9.0",
         "dayjs": "^1.11.13",
+        "lodash": "^4.17.21",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-error-boundary": "^6.0.0",
