update old configs

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,8 +1,10 @@
-FROM oven/bun
-WORKDIR /turboflop-web
+FROM oven/bun AS builder
+WORKDIR /turboflop
+COPY package.json bun.lockb ./
+RUN bun install --frozen-lockfile
 COPY . .
-RUN bun i
 RUN bun x vite build
-RUN bun i -g serve
-EXPOSE 8080
-CMD ["bun", "x", "serve", "-s", "dist", "-l", "8080"]
+
+FROM nginx:alpine
+COPY --from=builder /turboflop/dist /usr/share/nginx/html
+EXPOSE 80
