--- a/admin/package.json
+++ b/admin/package.json
@@ -28,8 +28,7 @@
         "redux-saga": "^1.3.0",
         "sass": "^1.89.1",
         "typescript": "^5.8.3",
-        "uuid": "^11.1.0",
-        "vite-plugin-env-compatible": "^2.0.1"
+        "uuid": "^11.1.0"
     },
     "scripts": {
         "dev": "bun x vite",
