--- a/admin/package.json
+++ b/admin/package.json
@@ -57,6 +57,7 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@types/lodash": "^4.17.17",
         "@types/redux-logger": "^3.0.13",
         "@typescript-eslint/eslint-plugin": "^8.33.0",
         "@typescript-eslint/parser": "^8.33.0",
