--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -21,8 +21,8 @@ jobs:
             - name: Login to ghcr
               uses: docker/login-action@v3
               with:
-                  username: ${{ secrets.GHCR_USERNAME }}
-                  password: ${{ secrets.GHCR_TOKEN }}
+                  username: ${{ github.actor }}
+                  password: ${{ GITHUB_TOKEN }}
                   registry: ghcr.io
 
             - name: Build and push
@@ -31,7 +31,7 @@ jobs:
                   push: true
                   context: .
                   file: Dockerfile.web
-                  tags: ghcr.io/legendariusx/turboflop-web:latest
+                  tags: ghcr.io/${{ github.repository_owner }}/turboflop-web:latest
 
     spacetime:
         runs-on: ubuntu-latest
@@ -48,8 +48,8 @@ jobs:
             - name: Login to ghcr
               uses: docker/login-action@v3
               with:
-                  username: ${{ secrets.GHCR_USERNAME }}
-                  password: ${{ secrets.GHCR_TOKEN }}
+                  username: ${{ github.actor }}
+                  password: ${{ GITHUB_TOKEN }}
                   registry: ghcr.io
 
             - name: Build and push
@@ -58,4 +58,4 @@ jobs:
                   push: true
                   context: server
                   file: server/Dockerfile.spacetime
-                  tags: ghcr.io/legendariusx/turboflop-spacetime:latest
+                  tags: ghcr.io/${{ github.repository_owner }}/turboflop-spacetime:latest
