--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -22,7 +22,7 @@ jobs:
               uses: docker/login-action@v3
               with:
                   username: ${{ github.actor }}
-                  password: ${{ GITHUB_TOKEN }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
                   registry: ghcr.io
 
             - name: Build and push
@@ -49,7 +49,7 @@ jobs:
               uses: docker/login-action@v3
               with:
                   username: ${{ github.actor }}
-                  password: ${{ GITHUB_TOKEN }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
                   registry: ghcr.io
 
             - name: Build and push
